--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+nav .menu{
+  @apply max-[850px]:flex max-[850px]:flex-col min-[851px]:flex min-[851px]:gap-x-[20px] bg-[#fff] max-[850px]:absolute
+  top-0 max-[850px]:left-[0] max-[850px]:opacity-0 max-[850px]:p-[50px_0_30px_0] max-[850px]:w-full max-[850px]:-z-50;
+}
+
+nav .menu.active{
+  overflow-y: scroll;
+  transition: 0.3s ease-in-out;
+  @apply bg-[#fff] left-0 opacity-[1] px-[5px] max-[850px]:h-[100vh];
+}
+
+nav .submenu{
+  @apply min-[851px]:shadow-md min-[851px]:z-50;
+}
+
+/* nav .sub-sub-menu{
+  @apply min-[851px]:absolute min-[851px]:top-0 min-[851px]:left-[100%] min-[851px]:shadow-md;
+} */
